k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-svc
  namespace: retail-forecast
  labels:
    app: streamlit-retail
spec:
  type: ClusterIP
  selector:
    app: streamlit-retail
  ports:
    - name: http
      port: 80
      targetPort: 8501
